# pathfinder-rpg-tools-core

./: CMakeLists.txt
include/: abilityscores.h  baseattackbonus.h  characterdescription.h  combatmaneuverbonus.h  combatmaneuvers.h  common.h  datatypes.h  hitpoints.h  initiative.h  observer.h  observersubject.h  preprocessordefines.h  skills.h
src/: abilityscores.cpp  baseattackbonus.cpp  characterdescription.cpp  combatmaneuverbonus.cpp  combatmaneuvers.cpp  hitpoints.cpp  initiative.cpp  skills.cpp  testmain.cpp
tests/: a.out  abilityscoretests.cpp  baseattackbonustests.cpp  characterdescriptiontests.cpp  combatmaneuvertests.cpp  hitpointtests.cpp  initiativetests.cpp
tests/include/: testcommon.h
